--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyB3nGsMRzHC9MM49kgiKSaTFBUYkbkz1II" />
 
         <activity
             android:name=".actividades.CambiarContrasenaActivity"
