--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,9 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
 
     <application
-        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -40,11 +38,17 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:exported="true"
             android:value="AIzaSyB3nGsMRzHC9MM49kgiKSaTFBUYkbkz1II" />
 
-        <service android:name=".servicios.FloatingButtonService"
-            android:permission="android.permission.SYSTEM_ALERT_WINDOW" />
+        <meta-data
+
+            android:name="com.facebook.sdk.ApplicationId"
+
+            android:value="@string/facebook_app_id"/>
+
+        <meta-data android:name="com.facebook.sdk.ClientToken"
+
+            android:value="@string/facebook_client_token"/>
 
         <activity
             android:name=".actividades.CambiarContrasenaActivity"
